--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.56.0",
+    "nodemon": "^3.0.3",
     "prettier": "^3.2.5",
     "prettier-eslint": "^16.3.0"
   },
