--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier-eslint": "^16.3.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "pg": "^8.11.3"
   }
