--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
     "pg": "^8.11.3"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
