--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier-eslint": "^16.3.0"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1",
+    "openai": "^4.47.1",
     "pg": "^8.11.3"
   },
   "engines": {
